@@ -21,8 +21,8 @@
 
 $widget = (new CWidget())
 	->setTitle(_('Discovery rules'))
-	->addItem(get_header_host_table('discoveries', $this->data['hostid'],
-		isset($this->data['parent_discoveryid']) ? $this->data['parent_discoveryid'] : 0
+	->addItem(get_header_host_table('discoveries', $data['hostid'],
+		array_key_exists('itemid', $data) ? $data['itemid'] : 0
 	));
 
 // create form
@@ -30,9 +30,7 @@ $itemForm = (new CForm())
 	->setName('itemForm')
 	->addVar('form', $this->data['form'])
 	->addVar('hostid', $this->data['hostid']);
-if (!empty($this->data['parent_discoveryid'])) {
-	$itemForm->addVar('parent_discoveryid', $this->data['parent_discoveryid']);
-}
+
 if (!empty($this->data['itemid'])) {
 	$itemForm->addVar('itemid', $this->data['itemid']);
 }
@@ -351,23 +349,19 @@ if (!hasRequest('form_refresh')) {
 
 // append buttons to form
 if (!empty($this->data['itemid'])) {
-	$buttons = [new CSubmit('clone', _('Clone'))];
-
-	if (!$this->data['limited']) {
-		$buttons[] = new CButtonDelete(
-			_('Delete discovery rule?'),
-			url_params(['form', 'groupid', 'itemid', 'parent_discoveryid', 'hostid'])
-		);
-	}
-
-	$buttons[] = new CButtonCancel(url_param('groupid').url_param('parent_discoveryid').url_param('hostid'));
-
-	$itemTab->setFooter(makeFormFooter(new CSubmit('update', _('Update')), $buttons));
+	$itemTab->setFooter(makeFormFooter(
+		new CSubmit('update', _('Update')), [
+			new CSubmit('clone', _('Clone')),
+			(new CButtonDelete(_('Delete discovery rule?'), url_params(['form', 'itemid', 'hostid'])))
+				->setEnabled(!$data['limited']),
+			new CButtonCancel(url_param('hostid'))
+		]
+	));
 }
 else {
 	$itemTab->setFooter(makeFormFooter(
 		new CSubmit('add', _('Add')),
-		[new CButtonCancel(url_param('groupid').url_param('parent_discoveryid').url_param('hostid'))]
+		[new CButtonCancel(url_param('hostid'))]
 	));
 }
 
