@@ -29,7 +29,6 @@ if (!empty($this->data['hostid'])) {
 $itemForm = (new CForm())
 	->setName('itemForm')
 	->addVar('form', $this->data['form'])
-	->addVar('hostid', $this->data['hostid'])
 	->addVar('parent_discoveryid', $this->data['parent_discoveryid']);
 
 if (!empty($this->data['itemid'])) {
@@ -411,22 +410,20 @@ $itemTab = (new CTabView())->addTab('itemTab', $this->data['caption'], $itemForm
 
 // append buttons to form
 if ($this->data['itemid'] != 0) {
-	$buttons = [new CSubmit('clone', _('Clone'))];
-
-	if (!$this->data['limited']) {
-		$buttons[] = new CButtonDelete(_('Delete item prototype?'),
-			url_params(['form', 'groupid', 'itemid', 'parent_discoveryid', 'hostid'])
-		);
-	}
-
-	$buttons[] = new CButtonCancel(url_param('groupid').url_param('parent_discoveryid').url_param('hostid'));
-
-	$itemTab->setFooter(makeFormFooter(new CSubmit('update', _('Update')), $buttons));
+	$itemTab->setFooter(makeFormFooter(
+		new CSubmit('update', _('Update')), [
+			new CSubmit('clone', _('Clone')),
+			(new CButtonDelete(_('Delete item prototype?'),
+				url_params(['form', 'itemid', 'parent_discoveryid'])
+			))->setEnabled(!$data['limited']),
+			new CButtonCancel(url_params(['parent_discoveryid']))
+		]
+	));
 }
 else {
 	$itemTab->setFooter(makeFormFooter(
 		new CSubmit('add', _('Add')),
-		[new CButtonCancel(url_param('groupid').url_param('parent_discoveryid').url_param('hostid'))]
+		[new CButtonCancel(url_params(['parent_discoveryid']))]
 	));
 }
 
